// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > States Matches snapshot when passed all props 1`] = `
<Context.Provider
  value="small"
>
  <ForwardRef(styled.div)>
    <NodeFixture />
  </ForwardRef(styled.div)>
</Context.Provider>
`;

exports[`jest-auto-snapshots > States Matches snapshot when passed only required props 1`] = `
<Context.Provider
  value="large"
>
  <ForwardRef(styled.div)>
    <NodeFixture />
  </ForwardRef(styled.div)>
</Context.Provider>
`;
